<resources>
    <string name="app_name">PacmanKotlin</string>
    <string name="points">Points:</string>
    <string name="move_right">Move Right</string>
    <string name="action_settings">Settings</string>
    <string name="action_shareContent">Share</string>
    <string name="newgame">New Game</string>
    <string name="move_down">move down</string>
    <string name="move_up">move up</string>
    <string name="move_left">move left</string>
    <string name="c">Continue</string>
    <string name="p">Pause</string>
    <string name="timerValue">Timer Value: %1$d</string>
    <string name="timeLeft">Time Left: %1$d</string>

</resources>
